--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -81,4 +81,11 @@ html {
 
   }
 
-
+  .dark body {
+    background-color: #0d0950;
+    color: #fff;
+  }
+  
+  .dark .nav-links a {
+    color: #fff;
+  }
